fix ToSet method in ArrayStack